finished header framework

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css"/>
     <title>Juan C. Chavez - Portfolio</title>
 </head>
 
@@ -12,28 +13,40 @@
     <!-- navigation -->
     <header>
         <h1>
-            <a href="/">Portfolio</a>
+            <a href="/">portfolio</a>
         </h1>
         <nav>
             <ul>
                 <li>
-                    <a href="/">Work</a>
+                    <a href="/">about</a>
                 </li>
                 <li>
-                    <a href="/">Contact Me</a>
+                    <a href="/">work</a>
+                </li>
+                <li>
+                    <a href="/">contact</a>
                 </li>
             </ul>
         </nav>
     </header>
 
     <!-- hero/jumbotron -->
-    <section class="hero"></section>
+    <section class="hero">
+        <div class="hero-title">
+            <h1>Juan C. Chavez</h1>
+            <h3>Junior Web Developer</h3>
+        </div>
+        <div>
+            <img src="./assets/images/Portrait_Placeholder.png" alt="" width="200"/>
+        </div>
+
+    </section>
 
     <!-- About Me -->
     <section>
         <div>
             <h2>
-                About Me
+                ABOUT
             </h2>
         </div>
         <div>
@@ -47,7 +60,7 @@
     <section>
         <div>
             <h2>
-                Work
+                WORK
             </h2>
         </div>
         <article>
@@ -68,8 +81,13 @@
     <section>
         <div>
             <h2>
-                Contact Me
+                CONTACT
             </h2>
+        </div>
+        <div>
+            <email><b>Email </b><a href="chavez.juan.018@gmail.com">chavez.juan.018@gmail.com</a></email>
+            <p><b>Phone </b><a href="tel:+15036892792">503.689.2792</a></p>
+            <p><b>Address </b>Aumsville, OR</p>
         </div>
     </section>
 
