turn in assingment

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 
     </section>
 
-    <!-- About Me -->
-    <section>
-        <div>
+    <!-- About -->
+    <section class="about" class="left-side">
+        <div class="title-about">
             <h2>
                 ABOUT
             </h2>
         </div>
-        <div>
+        <div class="content-about">
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, quibusdam eaque quos rem iste tempora dignissimos repellendus aliquid vitae quaerat sequi omnis facere cum exercitationem nisi culpa. Pariatur, tempora iure.
             </p>
@@ -57,7 +57,7 @@
     </section>
 
     <!-- Work -->
-    <section>
+    <section class="work" class="left-side">
         <div>
             <h2>
                 WORK
@@ -77,14 +77,14 @@
         </article>
     </section>
 
-    <!-- Contact Me -->
-    <section>
-        <div>
+    <!-- Contact -->
+    <section class="contact" class="left-side">
+        <div class="contact-title">
             <h2>
                 CONTACT
             </h2>
         </div>
-        <div>
+        <div class="contact-content">
             <email><b>Email </b><a href="chavez.juan.018@gmail.com">chavez.juan.018@gmail.com</a></email>
             <p><b>Phone </b><a href="tel:+15036892792">503.689.2792</a></p>
             <p><b>Address </b>Aumsville, OR</p>
@@ -93,9 +93,9 @@
 
     <!-- footer -->
     <footer>
-        <h2>
+        <h3>
             Made by Juan C. Chavez
-        </h2>
+        </h3>
     </footer>
 </body>
 </html>
