added temp images

--- a/index.html
+++ b/index.html
@@ -63,18 +63,20 @@
                 WORK
             </h2>
         </div>
-        <article>
-            <img/>
-        </article>
-        <article>
-            <img/>
-        </article>
-        <article>
-            <img/>
-        </article>
-        <article>
-            <img/>
-        </article>
+        <div class="work-images">
+            <article>
+                <img src="./assets/images/stock-vectors.jpg" alt="" width="175"/>
+            </article>
+            <article>
+                <img src="./assets/images/stock-vectors.jpg" alt="" width="175"/>
+            </article>
+            <article>
+                <img src="./assets/images/stock-vectors.jpg" alt="" width="175"/>
+            </article>
+            <article>
+                <img src="./assets/images/stock-vectors.jpg" alt="" width="175"/>
+            </article>
+        </div>
     </section>
 
     <!-- Contact -->
