simplified and organized html elements

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <!-- navigation -->
     <header>
         <h1>
-            <a href="/">portfolio</a>
+            <a href="">Juan C. Chavez</a>
         </h1>
         <nav>
             <ul>
                 <li>
-                    <a href="/">about</a>
+                    <a href="#about">about</a>
                 </li>
                 <li>
-                    <a href="/">work</a>
+                    <a href="#work">work</a>
                 </li>
                 <li>
-                    <a href="/">contact</a>
+                    <a href="#contact">contact</a>
                 </li>
             </ul>
         </nav>
@@ -32,65 +32,51 @@
 
     <!-- hero/jumbotron -->
     <section class="hero">
-        <div class="hero-title">
-            <h1>Juan C. Chavez</h1>
-            <h3>Junior Web Developer</h3>
-        </div>
         <div>
             <img src="./assets/images/Portrait_Placeholder.png" alt="" width="200"/>
         </div>
-
-    </section>
-
-    <!-- About -->
-    <section class="about" class="left-side">
-        <div class="title-about">
-            <h2>
-                ABOUT
-            </h2>
-        </div>
-        <div class="content-about">
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, quibusdam eaque quos rem iste tempora dignissimos repellendus aliquid vitae quaerat sequi omnis facere cum exercitationem nisi culpa. Pariatur, tempora iure.
-            </p>
+        <div class="hero-title">
+            <h3>Junior Web Developer</h3>
         </div>
     </section>
+    <div class="page-wrapper">
+        <!-- About -->
+        <section class="about" id="about">
+                <h2 class="left-title">
+                    ABOUT
+                </h2>
+                <p>
+                    Hello, I am a developer in the making. This page is to showcase my future projects and where you can find my contact info.
+                </p>
+        </section>
 
-    <!-- Work -->
-    <section class="work" class="left-side">
-        <div>
-            <h2>
+        <!-- Work -->
+        <section class="work" id="work">
+            <h2 class="left-title">
                 WORK
             </h2>
-        </div>
-        <article>
-            <img/>
-        </article>
-        <article>
-            <img/>
-        </article>
-        <article>
-            <img/>
-        </article>
-        <article>
-            <img/>
-        </article>
-    </section>
+            <div class="work-grid-container">
+                <div class="grid-item1">1</div>
+                <div class="grid-item2">2</div>
+                <div class="grid-item3">3</div>
+                <div class="grid-item4">4</div>
+                <div class="grid-item5">5</div>
+            </div>
+            
+        </section>
 
-    <!-- Contact -->
-    <section class="contact" class="left-side">
-        <div class="contact-title">
-            <h2>
+        <!-- Contact -->
+        <section class="contact" id="contact">
+            <h2 class="left-title">
                 CONTACT
             </h2>
-        </div>
-        <div class="contact-content">
-            <email><b>Email </b><a href="chavez.juan.018@gmail.com">chavez.juan.018@gmail.com</a></email>
-            <p><b>Phone </b><a href="tel:+15036892792">503.689.2792</a></p>
-            <p><b>Address </b>Aumsville, OR</p>
-        </div>
-    </section>
-
+            <div class="contact-content">
+                <email><b>Email </b><a href="chavez.juan.018@gmail.com">chavez.juan.018@gmail.com</a></email>
+                <p><b>Phone </b><a href="tel:+15036892792">503.689.2792</a></p>
+                <p><b>Address </b>Aumsville, OR</p>
+            </div>
+        </section>
+    </div>
     <!-- footer -->
     <footer>
         <h3>
