--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
     <div class="page-wrapper">
         <!-- About -->
-        <section class="about" id="about">
+        <section class="about content" id="about">
                 <h2 class="left-title">
                     ABOUT
                 </h2>
@@ -51,22 +51,22 @@
         </section>
 
         <!-- Work -->
-        <section class="work" id="work">
+        <section class="work content" id="work">
             <h2 class="left-title">
                 WORK
             </h2>
             <div class="work-grid-container">
-                <div class="grid-item1">1</div>
-                <div class="grid-item2">2</div>
-                <div class="grid-item3">3</div>
-                <div class="grid-item4">4</div>
-                <div class="grid-item5">5</div>
+                <a href="https://chriskurz098.github.io/Group-Project-Spelling-Bee/" class="grid-item1"></a>
+                <div class="grid-item2 "></div>
+                <div class="grid-item3 "></div>
+                <div class="grid-item4 "></div>
+                <div class="grid-item5 "></div>
             </div>
             
         </section>
 
         <!-- Contact -->
-        <section class="contact" id="contact">
+        <section class="contact content" id="contact">
             <h2 class="left-title">
                 CONTACT
             </h2>
