fixed email's margin

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 CONTACT
             </h2>
             <div class="contact-content">
-                <email><b>Email </b><a href="chavez.juan.018@gmail.com">chavez.juan.018@gmail.com</a></email>
+                <email id="email"><b>Email </b><a href="chavez.juan.018@gmail.com">chavez.juan.018@gmail.com</a></email>
                 <p><b>Phone </b><a href="tel:+15036892792">503.689.2792</a></p>
                 <p><b>Address </b>Aumsville, OR</p>
             </div>
