--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- hero/jumbotron -->
     <section class="hero">
         <div>
-            <img src="./assets/images/Portrait_Placeholder.png" alt="" width="200"/>
+            <img src="./assets/images/blank-profile-picture.jpeg" alt="" width="200"/>
         </div>
         <div class="hero-title">
             <h3>Junior Web Developer</h3>
@@ -57,7 +57,7 @@
             </h2>
             <div class="work-grid-container">
                 <a href="https://chriskurz098.github.io/Group-Project-Spelling-Bee/" class="grid-item1"></a>
-                <div class="grid-item2 "></div>
+                <a href="https://damp-journey-96412.herokuapp.com/" class="grid-item2"></a>
                 <div class="grid-item3 "></div>
                 <div class="grid-item4 "></div>
                 <div class="grid-item5 "></div>
@@ -71,17 +71,17 @@
                 CONTACT
             </h2>
             <div class="contact-content">
-                <email id="email"><b>Email </b><a href="chavez.juan.018@gmail.com">chavez.juan.018@gmail.com</a></email>
-                <p><b>Phone </b><a href="tel:+15036892792">503.689.2792</a></p>
+                <email id="email"><b>Email </b><a href="realchavezjuan@gmail.com">realchavezjuan@gmail.com</a></email>
+                <p><b>Phone </b><a href="tel:+18888888888">888.888.8888</a></p>
                 <p><b>Address </b>Aumsville, OR</p>
             </div>
         </section>
     </div>
     <!-- footer -->
     <footer>
-        <h3>
+        <p>
             Made by Juan C. Chavez
-        </h3>
+        </p>
     </footer>
 </body>
 </html>
